<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@android:color/white">

    <TextView
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_title"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"/>

    <FrameLayout
            android:id="@+id/info_logo"
            android:layout_below="@id/info_title"
            android:layout_alignParentLeft="true"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:padding="2dp"
            android:background="@color/bg_gray"
            android:layout_marginBottom="10dp">
        <ImageView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/brajik_logo"/>
    </FrameLayout>

    <TextView
            android:layout_toRightOf="@id/info_logo"
            android:layout_below="@id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/information_title2"/>

    <TextView
            android:id="@+id/info_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/copyright"
            android:layout_marginTop="5dp"
            android:autoLink="email"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"/>

    <ScrollView
            android:layout_below="@id/info_logo"
            android:layout_above="@id/info_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/information_contents"/>
    </ScrollView>
</RelativeLayout>
